[gd_scene load_steps=17 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://assets/graphical/player-ac.png" type="Texture" id=2]
[ext_resource path="res://assets/graphical/player-b.png" type="Texture" id=3]
[ext_resource path="res://assets/graphical/player-d.png" type="Texture" id=4]
[ext_resource path="res://assets/graphical/player-e.png" type="Texture" id=5]
[ext_resource path="res://assets/graphical/player-f.png" type="Texture" id=6]
[ext_resource path="res://assets/graphical/player-g.png" type="Texture" id=7]
[ext_resource path="res://assets/graphical/player-h.png" type="Texture" id=8]
[ext_resource path="res://assets/graphical/PlayerCollision_b.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/graphical/PlayerCollision_ac.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/graphical/PlayerCollision_d.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/graphical/PlayerCollision_e.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/graphical/PlayerCollision_f.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/graphical/PlayerCollision_g.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/graphical/PlayerCollision_h.tscn" type="PackedScene" id=15]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "rest",
"speed": 2.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "walk_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "walk_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "walk_x",
"speed": 5.0
} ]

[node name="Player" type="Area2D"]
position = Vector2( 240, 360 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -40 )
scale = Vector2( 2, 2 )
frames = SubResource( 3 )
animation = "rest"
frame = 1
playing = true

[node name="PlayerCollision_ac" parent="." groups=["collisions"] instance=ExtResource( 10 )]
visible = false

[node name="PlayerCollision_b" parent="." groups=["collisions"] instance=ExtResource( 9 )]
visible = false

[node name="PlayerCollision_d" parent="." groups=["collisions"] instance=ExtResource( 11 )]
visible = false

[node name="PlayerCollision_e" parent="." groups=["collisions"] instance=ExtResource( 12 )]
visible = false

[node name="PlayerCollision_f" parent="." groups=["collisions"] instance=ExtResource( 13 )]
visible = false

[node name="PlayerCollision_g" parent="." groups=["collisions"] instance=ExtResource( 14 )]
visible = false

[node name="PlayerCollision_h" parent="." groups=["collisions"] instance=ExtResource( 15 )]
visible = false

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
